--- a/kubernetes-manifests/checkoutservice.yaml
+++ b/kubernetes-manifests/checkoutservice.yaml
@@ -42,7 +42,7 @@ spec:
                 - ALL
             privileged: false
             readOnlyRootFilesystem: true
-          image: checkoutservice
+          image: 210.90.172.190/demo/checkoutservice:v0.8.0 
           ports:
           - containerPort: 5050
           readinessProbe:
