--- a/kubernetes-manifests/frontend.yaml
+++ b/kubernetes-manifests/frontend.yaml
@@ -44,7 +44,7 @@ spec:
                 - ALL
             privileged: false
             readOnlyRootFilesystem: true
-          image: frontend
+          image: 210.90.172.190/demo/frontend:v0.8.0 
           ports:
           - containerPort: 8080
           readinessProbe:
